# playrust

./: .gitignore  Cargo.toml
src/: lib.rs
src/core/: error.rs
src/workers/: kafka_processing.rs  mod.rs
