[package]
name = "playrust"
version = "0.1.0"
authors = ["Hien Pham <hienduyph@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4.21"
reqwest = "*"
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.25", features = ["cmake-build"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"]}
structured-logger = "1.0.3"
